--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.47</version>
+		</dependency>
+
 		<!-- 又拍云 SDK -->
 		<dependency>
 			<groupId>com.upyun</groupId>
