:art: 又拍云OSS支持

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8222
+## MULTIPART (MultipartProperties)
+# 开启 multipart 上传功能
+spring.servlet.multipart.enabled=true
+# 文件写入磁盘的阈值
+spring.servlet.multipart.file-size-threshold=0B
+# 最大文件大小
+spring.servlet.multipart.max-file-size=1024000MB
+# 最大请求大小
+spring.servlet.multipart.max-request-size=1024015MB
